--- a/index.html
+++ b/index.html
@@ -1,74 +1,58 @@
-<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" >
+<head>
+<title>Advanced Search Demo</title>
+	<link id="jquiCSS" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://raw.github.com/evoluteur/advancedSearch/master/css/demo.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://raw.github.com/evoluteur/advancedSearch/master/css/evol.advancedSearch.css" type="text/css" media="all" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="https://raw.github.com/evoluteur/advancedSearch/master/js/evol.advancedSearch.js" type="text/javascript"></script>
+	<script src="https://raw.github.com/evoluteur/advancedSearch/master/js/model-demo1.js" type="text/javascript"></script> 
+</head>
+<body>   
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Advancedsearch : advancedSearch is a (prototype of) jQuery UI widget for building structured search queries." />
+<h1>Advanced Search Demo</h1> 
+<h2>This project is still a prototype</h2>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<p>Theme: 
+<a href="#" class="css">le-frog</a> - 
+<a href="#" class="css">redmond</a> - 
+<a href="#" class="css">start</a> - 
+<a href="#" class="css">ui-darkness</a> - 
+<a href="#" class="css">ui-lightness</a>
+</p>
 
-    <title>Advancedsearch</title>
-  </head>
+<div id="evol"></div>
+	 
+<p>Tests: 
+<a href="#" id="bVal">Val</a> - 
+<a href="#" id="bTextVal">Text Val</a>
+</p>
 
-  <body>
+<script> 
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/evoluteur/advancedSearch">View on GitHub</a>
+    $('.css').click(function(){
+        $('#jquiCSS').attr('href','http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/'+this.innerHTML+'/jquery-ui.css');
+    });
 
-          <h1 id="project_title">Advancedsearch</h1>
-          <h2 id="project_tagline">advancedSearch is a (prototype of) jQuery UI widget for building structured search queries.</h2>
+    $('#evol').advancedSearch({fields:contacts }); 
+	
+	$('#bVal').click(function(){
+		var v=$('#evol').advancedSearch("val")
+		alert(JSON.stringify(v))
+	})
+	$('#bTextVal').click(function(){
+		var v=$('#evol').advancedSearch("textVal")
+		alert(v)
+	})
+	
+</script>
+ 
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/evoluteur/advancedSearch/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/evoluteur/advancedSearch/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<p><br/>evol.advancedSearch on GitHub: <a href="https://github.com/evoluteur/advancedSearch" target="download">https://github.com/evoluteur/advancedSearch</a></p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+<br/><br/>
+<div class="footer">© 2012 Olivier Giulieri</div> 
+</body>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and weâ€™ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Advancedsearch maintained by <a href="https://github.com/evoluteur">evoluteur</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
