--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 <div id="evol"></div>
 	 
 <p>Tests: 
+<a href="#" id="addFilter">Add Filter</a> - <a href="#" id="delFilter">Remove First Filter</a>
+<br/>Value: 
 <a href="#" id="bVal">Val</a> - 
-<a href="#" id="bTextVal">Text Val</a>
+<a href="#" id="bValText">Text Val</a> - 
+<a href="#" id="bValUrl">URL Val</a>
 </p>
 
 <script> 
@@ -41,15 +44,39 @@
 		var v=$('#evol').advancedSearch("val")
 		alert(JSON.stringify(v))
 	})
-	$('#bTextVal').click(function(){
-		var v=$('#evol').advancedSearch("textVal")
+	$('#bValText').click(function(){
+		var v=$('#evol').advancedSearch("valText")
 		alert(v)
+	})
+	$('#bValUrl').click(function(){
+		var v=$('#evol').advancedSearch("valUrl")
+		alert(v)
+	})
+	$('#addFilter').click(function(){
+		var filterDef = {
+			field:{
+				label: 'Lastname',
+				value: 'Lastname'
+			},
+			operator:{
+				label: 'start w/',
+				value: 'sw'
+			}, 
+			value:{
+				label: '"abc"',
+				value: 'abc'
+			}
+		}
+		var v=$('#evol').advancedSearch("addFilter", filterDef);		
+	})
+	$('#delFilter').click(function(){
+		$('#evol').advancedSearch("removeFilter", 0);		
 	})
 	
 </script>
  
 
-<p><br/>evol.advancedSearch on GitHub: <a href="https://github.com/evoluteur/advancedSearch" target="download">https://github.com/evoluteur/advancedSearch</a></p>
+<p><br/>See on GitHub: <a href="https://github.com/evoluteur/advancedSearch" target="download">https://github.com/evoluteur/advancedSearch</a></p>
 
 <br/><br/>
 <div class="footer">© 2012 Olivier Giulieri</div> 
