Copied CSS in project for Firefox.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>Advanced Search Demo</title>
 	<link id="jquiCSS" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="https://raw.github.com/evoluteur/advancedSearch/master/css/demo.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="https://raw.github.com/evoluteur/advancedSearch/master/css/evol.advancedSearch.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/demo.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/evol.advancedSearch.css" type="text/css" media="all" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
 	<script src="https://raw.github.com/evoluteur/advancedSearch/master/js/evol.advancedSearch.js" type="text/javascript"></script>
@@ -12,7 +12,6 @@
 <body>   
 
 <h1>Advanced Search Demo</h1> 
-<h2>This project is still a prototype</h2>
 
 <p>Theme: 
 <a href="#" class="css">le-frog</a> - 
