--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
 <title>Advanced Search Demo</title>
-	<link id="jquiCSS" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-lightness/jquery-ui.css" type="text/css" media="all">
+	<link id="jquiCSS" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-lightness/jquery-ui.css" type="text/css" media="all">
 	<link rel="stylesheet" href="css/demo.css" type="text/css" media="all">
 	<link rel="stylesheet" href="css/evol.advancedSearch.css" type="text/css" media="all">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
 
 	<script src="js/evol.advancedSearch.min.js" type="text/javascript"></script>
 	<script src="js/model-demo1.js" type="text/javascript"></script> 
@@ -22,22 +22,22 @@
 <a href="#" class="css">redmond</a> - 
 <a href="#" class="css">start</a> - 
 <a href="#" class="css">ui-darkness</a> - 
-<a href="#" class="css">ui-lightness</a>
+<a href="#" class="css sel">ui-lightness</a>
 </p>
 
 <div id="evol"></div>
 	 
-<p class="demo-links">Tests: 
+<p class="demo-links">API Test: 
 <a href="#" id="addFilter">Add Filter</a> - 
 <a href="#" id="delFilter">Remove First Filter</a> - 
-<a href="#" id="empty">Empty</a> - 
+<a href="#" id="clear">Clear</a> - 
 <a href="#" id="length">Number of Filters</a>
 </p>
 
-<p class="demo-links">Value: 
-<a href="#" id="bValText">Text Value</a> - 
-<a href="#" id="bVal">JSON Value</a> - 
-<a href="#" id="bValUrl">URL Value</a>
+<p class="demo-links" id="linksValues">Value Format: 
+<a href="#" data-id="json" class="sel">JSON</a> - 
+<a href="#" data-id="text">Text</a> - 
+<a href="#" data-id="url">URL</a>
 </p>
 
 <p><textarea id="advSearchWidget" class="demoValue">
@@ -48,30 +48,45 @@
 
 $(document).ready(function(){
 
+	var v, valueFormat='json';
+	function updateValue(format){ 
+		switch(format){
+			case 'json':
+				v=JSON.stringify($('#evol').advancedSearch("val"));
+				break;
+			case 'text':
+				v=$('#evol').advancedSearch("valText");
+				break;
+			case 'url':
+				v=$('#evol').advancedSearch("valUrl");
+		}
+		$('#advSearchWidget').html(v);
+	}
+
 	// *****   setup theme links   *****
     $('.css').click(function(){
         $('#jquiCSS').attr('href','http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/'+this.innerHTML+'/jquery-ui.css');
+        $('.css').removeClass('sel');
+        $(this).addClass('sel');
     });
 
     // *****   setup advanced search widget   *****
     $('#evol').advancedSearch({fields:contacts })
     	.on('submit.search change.search', function(evt){
-    		$('#advSearchWidget').html($('#evol').advancedSearch('valText'));
+    		updateValue(valueFormat);
     	});
 	
-	// *****   setup values and tests links   *****
-	$('#bVal').click(function(){
-		var v=$('#evol').advancedSearch("val");
-		$('#advSearchWidget').html(JSON.stringify(v));
-	});
-	$('#bValText').click(function(){
-		var v=$('#evol').advancedSearch("valText");
-		$('#advSearchWidget').html(v);
-	});
-	$('#bValUrl').click(function(){
-		var v=$('#evol').advancedSearch("valUrl");
-		$('#advSearchWidget').html(v);
-	});
+	// *****   setup values   *****
+	$('#linksValues > a').on('click',function(){
+		var $this=$(this),
+			id=$this.data('id');
+		$this.addClass('sel')
+			.siblings().removeClass('sel');
+		valueFormat=id;
+		updateValue(id);
+	})
+
+	// *****   setup api tests links   *****
 	$('#addFilter').click(function(){
 		var filterDef = {
 			field:{
@@ -92,12 +107,12 @@ $(document).ready(function(){
 	$('#delFilter').click(function(){
 		$('#evol').advancedSearch("removeFilter", 0);		
 	});
-	$('#empty').click(function(){
-		$('#evol').advancedSearch("empty");		
+	$('#clear').click(function(){
+		$('#evol').advancedSearch("clear");		
 	});
 	$('#length').click(function(){
 		var v=$('#evol').advancedSearch("length");
-		alert(v);
+		alert(v + ' filters.');
 	});
 	
 	// *****   Prevent links from scrolling   *****
@@ -113,7 +128,7 @@ Download and Source code available at GitHub <a href="https://github.com/evolute
  
 
 <br/><br/>
-<div class="footer">&#169; 2013 Olivier Giulieri</div> 
+<div class="footer">&#169; 2014 Olivier Giulieri</div>
 </body>
 
 </html>
